--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -58,3 +58,27 @@
     margin-top: 10px;
     width: 260px;
 }
+
+.form-order {
+    margin-top: 15px;
+    padding-left: 20px;
+}
+
+.div-order {
+    border-color: #c7cbce !important;
+}
+
+.div-order-list {
+    border-color: #c7cbce !important;
+    padding-top: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.order-label {
+    width: 100px;
+}
+
+.order-input {
+    width: 400px !important;
+}
