--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
 
 {#    <script type="text/javascript" src="assets/js/jquery.min.js"></script>#}
     <script type="text/javascript" src="http://code.jquery.com/jquery-3.5.0.min.js"></script>
-    <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript" src = "{% static 'js/javascript.js' %}"></script>
 </body>
 </html>
